Getting all spacing fixed

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -212,7 +212,7 @@ font-size: 24px
 
 #timeHeader{
   margin-top: 25px;
-  margin-bottom: 10px;
+  margin-bottom: 18px;
   font-family: 'Lobster', cursive;
   font-size: 50px
 }
